# SkyrimKCDTravel

./: .gitignore  CMakeLists.txt  README.md  STATUS.md  redeploy.sh  vcpkg.json
Scripts/Source/: Wayfarer.psc  WayfarerPlayerAlias.psc
cmake/: copy_if_missing.cmake
data/: Wayfarer.esp
data/MCM/Config/Wayfarer/: config.json  settings.ini
data/SKSE/Plugins/: Wayfarer.ini
data/Scripts/: Wayfarer_MCM.pex
data/Source/Scripts/: Wayfarer_MCM.psc
src/: PCH.h  main.cpp
src/config/: Settings.cpp  Settings.h
src/encounters/: EncounterManager.cpp  EncounterManager.h
src/hooks/: FastTravelHook.cpp  FastTravelHook.h  MapMenuHook.cpp  MapMenuHook.h
src/journey/: JourneyController.cpp  JourneyController.h  RouteMath.cpp  RouteMath.h
src/papyrus/: PapyrusAPI.cpp  PapyrusAPI.h
src/ui/: MapMarkerDraw.cpp  MapMarkerDraw.h  TravelOverlay.cpp  TravelOverlay.h
